cabal-version: 2.4
name:          aoc2023
version:       0.1.0.0
synopsis:      Advent of Code 2023 solutions in Haskell
license:       MIT
author:        Noah Floyd
build-type:    Simple

common shared
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:
    base >=4.14 && <5,
    containers,
    split

executable day01
  import:  shared
  main-is: Day01.hs
  hs-source-dirs: src

executable day02
  import:  shared
  main-is: Day02.hs
  hs-source-dirs: src

executable day03
  import:  shared
  main-is: Day03.hs
  hs-source-dirs: src

executable day04
  import:  shared
  main-is: Day04.hs
  hs-source-dirs: src

executable day05
  import:  shared
  main-is: Day05.hs
  hs-source-dirs: src

executable day06
  import:  shared
  main-is: Day06.hs
  hs-source-dirs: src

executable day07
  import:  shared
  main-is: Day07.hs
  hs-source-dirs: src

executable day08
  import:  shared
  main-is: Day08.hs
  hs-source-dirs: src

executable day09
  import:  shared
  main-is: Day09.hs
  hs-source-dirs: src

executable day10
  import:  shared
  main-is: Day10.hs
  hs-source-dirs: src

executable day11
  import:  shared
  main-is: Day11.hs
  hs-source-dirs: src

executable day12
  import:  shared
  main-is: Day12.hs
  hs-source-dirs: src

executable day13
  import:  shared
  main-is: Day13.hs
  hs-source-dirs: src

executable day14
  import:  shared
  main-is: Day14.hs
  hs-source-dirs: src

executable day15
  import:  shared
  main-is: Day15.hs
  hs-source-dirs: src
